# omi-cli

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARK.md
src/omi_cli/: __main__.py  cli.py  client.py  config.py  dates.py  output.py
src/omi_cli/commands/: actions.py  auth.py  conversations.py  digest.py  export.py  goals.py  keys.py  memories.py  notes.py  search.py
tests/: conftest.py  test_client.py  test_commands.py  test_dates.py
